--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RefindProyecto">
         <activity android:name=".ActivityRegistro">
+
+        </activity>
+        <activity android:name=".ActivityLogin">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityLogin" />
         <activity android:name=".MainActivity">
 
         </activity>
