05_12 Lista de categorias
Se crearon los siguientes archivos:
 - Categoria_row.java
 - MyAdapter.java
 - MyHolder.java
 - Categoria_row

Modificacion del MainActivity.java y el MainActivity.xml
 - Se ha creado un recycler y cardView

--- Se procede al cambio de nombres y la colocacion de todos ellos ---

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //Implementacion para poder usar imagenes circulares
     implementation 'de.hdodenhof:circleimageview:2.1.0'
+    //Implementacion para usar el recycler y el card view
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
 }
