--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,17 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-
         android:supportsRtl="true"
         android:theme="@style/Theme.RefindProyecto">
-        <activity android:name=".SplashScreen.SplashScreen">
+        <activity android:name=".ActivityLAnuncios">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".SplashScreen.SplashScreen">
+
         </activity>
         <activity android:name=".ActivityFavoritos" />
         <activity android:name=".ActivityPerfil" />
@@ -40,9 +43,7 @@
             android:label="@string/title_activity_acivity_anuncio" />
         <activity android:name=".ActivityRegistro" />
         <activity android:name=".ActivityLogin" />
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
