--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.refindproyecto">
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -14,18 +15,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.RefindProyecto">
-        <activity android:name=".ActivityLAnuncios">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".SplashScreen.SplashScreen">
-
-        </activity>
-        <activity android:name=".ActivityFavoritos" />
-        <activity android:name=".ActivityPerfil" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -39,11 +29,23 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".AcivityAnuncio"
-            android:label="@string/title_activity_acivity_anuncio" />
+            android:name=".ActivityAnuncio"
+            android:label="@string/title_activity_anuncio">
+
+        </activity>
+        <activity android:name=".ActivityLAnuncios">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".SplashScreen.SplashScreen"></activity>
+        <activity android:name=".ActivityFavoritos" />
+        <activity android:name=".ActivityPerfil" />
         <activity android:name=".ActivityRegistro" />
         <activity android:name=".ActivityLogin" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
