16_12:1 Añadidos los atributos (latitud y longitud), constructor modificado y getters y setters Ya se muestra en el ActivityAnuncio

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,17 +38,19 @@
 
         </activity>
         <activity android:name=".SplashScreen.SplashScreen">
+
+        </activity>
+        <activity android:name=".ActivityFavoritos" />
+        <activity android:name=".ActivityPerfil" />
+        <activity android:name=".ActivityRegistro" />
+        <activity android:name=".ActivityLogin" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityFavoritos" />
-        <activity android:name=".ActivityPerfil" />
-        <activity android:name=".ActivityRegistro" />
-        <activity android:name=".ActivityLogin" />
-        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
