--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.refindproyecto" >
+    package="com.example.refindproyecto">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -14,7 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RefindProyecto" >
+        android:theme="@style/Theme.RefindProyecto">
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -29,22 +29,20 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" >
+            android:name=".ActivityAnuncio"
+            android:label="@string/title_activity_anuncio">
+
         </activity>
         <activity
-            android:name=".ActivityAnuncio"
-            android:label="@string/title_activity_anuncio" >
-        </activity>
-        <activity android:name=".ActivityLAnuncios" >
-        </activity>
-        <activity android:name=".SplashScreen.SplashScreen" >
-        </activity>
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
+        <activity android:name=".ActivityLAnuncios"></activity>
+        <activity android:name=".SplashScreen.SplashScreen"></activity>
         <activity android:name=".ActivityFavoritos" />
         <activity android:name=".ActivityPerfil" />
         <activity android:name=".ActivityRegistro" />
         <activity android:name=".ActivityLogin" />
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
