--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,14 +42,17 @@
         <activity android:name=".ActivityFavoritos" />
         <activity android:name=".ActivityPerfil" />
         <activity android:name=".ActivityRegistro" />
-        <activity android:name=".ActivityLogin" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".ActivityLogin">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity">
+
+        </activity>
     </application>
 
 </manifest>
+
