--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.refindproyecto">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -9,14 +8,20 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.RefindProyecto">
+        android:theme="@style/Theme.RefindProyecto"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ActivityListaFav">
+        </activity>
+        <activity android:name=".ActivityListaAnun"></activity>
+        <activity android:name=".ActivityListaCat">
 
+        </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -31,28 +36,20 @@
 
         <activity
             android:name=".ActivityAnuncio"
-            android:label="@string/title_activity_anuncio">
-
-        </activity>
+            android:label="@string/title_activity_anuncio" />
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
-        <activity android:name=".ActivityLAnuncios"></activity>
-        <activity android:name=".SplashScreen.SplashScreen"></activity>
-        <activity android:name=".ActivityFavoritos" />
-        <activity android:name=".ActivityPerfil" />
-        <activity android:name=".ActivityRegistro" />
-        <activity android:name=".ActivityLogin">
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".SplashScreen.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".ActivityPerfil" />
+        <activity android:name=".ActivityRegistro" />
+        <activity android:name=".ActivityLogin" />
     </application>
 
 </manifest>
-
