--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.refindproyecto">
 
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,10 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RefindProyecto"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ActivityAnuncio"></activity>
-        <activity android:name=".ActivityListaFav"></activity>
+        <activity android:name=".verImagen">
+
+        </activity>
+        <activity android:name=".ActivityAnuncio" />
+        <activity android:name=".ActivityListaFav" />
         <activity android:name=".ActivityListaAnun" />
-        <activity android:name=".ActivityListaCat"></activity>
+        <activity android:name=".ActivityListaCat" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -24,7 +28,6 @@
         <activity android:name=".SplashScreen.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
