--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityPerfil" />
+        <activity android:name=".ActivityPerfil"
+            android:parentActivityName=".ActivityLogin">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ActivityLogin"
+                />
+        </activity>
         <activity android:name=".ActivityRegistro" />
         <activity android:name=".ActivityLogin" />
     </application>
