--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     //BD
     implementation 'com.android.volley:volley:1.1.0'
     implementation "com.airbnb.android:lottie:3.6.1"
+
+    //PAYPAL
+    implementation 'com.paypal.sdk:paypal-android-sdk:2.16.0'
 }
