--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RefindProyecto"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ActivityNewAnuncio"></activity>
+        <activity
+            android:name=".ActivityAjustesUsuario"
+            android:exported="false" />
+        <activity android:name=".ActivityNewAnuncio" />
         <activity android:name=".ActivityAnuncio" />
         <activity android:name=".ActivityListaFav" />
         <activity android:name=".ActivityListaAnun" />
