--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.RefindProyecto"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ActivityCrearAnuncio"
+            android:exported="false" />
+        <activity
             android:name=".ActivityAjustesUsuario"
             android:exported="false" />
         <activity android:name=".ActivityNewAnuncio" />
